[tool.poetry]
name = "PCBValues-backend"
version = "2.1.0"
description = "A backend API server for submitting scores from pcbvalues.github.io"
authors = ["TheGhostOfInky"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
aiohttp = "^3.9.0"
urllib3 = "^1.26.12"
quart-cors = "^0.6.0"
hypercorn = "^0.14.3"
brotli-asgi = "1.4.0"
charset-normalizer = "^3.2.2"
certifi = "^2023.11.17"
Quart = "^0.19.4"
Werkzeug = "^3.0.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"